--- a/Views/UsersView.xaml
+++ b/Views/UsersView.xaml
@@ -92,25 +92,32 @@
                  Canvas.Left="910" Canvas.Top="96" Background="#FF333333" BorderThickness="1" 
                  Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" 
                  HorizontalAlignment="Left" VerticalAlignment="Center">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Names}" Width="276"/>
 
-                </GridView>
-            </ListView.View>
         </ListView>
 
         <ListView x:Name="List_User_Matches" 
-                  Height="324" Width="336" ItemsSource="{Binding }" 
+                  Height="324" Width="336" ItemsSource="{Binding ListOfMatchedNames  }" 
                   Canvas.Left="500" Canvas.Top="372" Background="#FF333333" BorderThickness="1" 
                   Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" 
                   HorizontalAlignment="Left" VerticalAlignment="Top">
-            <ListView.View>
-            <GridView>
-                <GridViewColumn DisplayMemberBinding="{Binding }" Width="276"/>
+            <ListView.ItemTemplate>
+    <DataTemplate>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Border Grid.Column="0" Padding="5,5,5,5">
+                <TextBlock Grid.Column ="0" Text="{Binding name}"/>
+            </Border>
+            <Border Grid.Column="1" Padding="5,5,5,5">
+                <TextBlock Grid.Column="1" Text="{Binding Gender}"/>
+            </Border>
 
-            </GridView>
-            </ListView.View>
+        </Grid>
+    </DataTemplate>
+</ListView.ItemTemplate>
+            
             </ListView>
 
 
